tests/transpiler/x/swift/exists_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/014/main.swift:3:13: error: cannot find 'exists' in scope
 1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:17:41 GMT+7
 2 | let data = [1, 2]
 3 | let flag = (exists(({ var _res: [Int] = []
   |             `- error: cannot find 'exists' in scope
 4 | for x in data {
 5 |     if ((x as! Int) == 1) {

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/014/main.swift:5:12: warning: forced cast of 'Int' to same type has no effect
 3 | let flag = (exists(({ var _res: [Int] = []
 4 | for x in data {
 5 |     if ((x as! Int) == 1) {
   |            `- warning: forced cast of 'Int' to same type has no effect
 6 |         _res.append((x as! Int))
 7 |     }

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/014/main.swift:6:24: warning: forced cast of 'Int' to same type has no effect
 4 | for x in data {
 5 |     if ((x as! Int) == 1) {
 6 |         _res.append((x as! Int))
   |                        `- warning: forced cast of 'Int' to same type has no effect
 7 |     }
 8 | }
