tests/transpiler/x/swift/exists_builtin.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:17:41 GMT+7
let data = [1, 2]
let flag = (exists(({ var _res: [Int] = []
for x in data {
    if ((x as! Int) == 1) {
        _res.append((x as! Int))
    }
}
return _res })()) as! Bool)
print((flag as! Bool))
